[metadata]
name = aiogazu
description = Aiogazu is a fork of gazu, adding asyncio functionalities. Gazu is a client for Zou, made by CGWire
long_description = file: README.md
keywords = cg, production, asset manager, asset, shot, tasks, tracking, asyncio
license = GNU Library or Lesser General Public License (LGPL)
license_file = LICENSE
author = TD gang & CG Wire
author_email = td@artfx.fr & frank@cg-wire.com
url = https://gazu.cg-wire.com/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    deprecated==1.2.13
    aiohttp==3.8.0

[options.extras_require]
dev =
    wheel

test =
    pytest==6.2.5; python_version >= "3.6"
    pytest==6.1.2; python_version == "3.5"
    pytest==4.6.11; python_version == "2.7"
    pytest-cov==2.12.1
    requests_mock==1.9.3
    pre-commit==2.15.0; python_version >= "3.6"
    pre-commit==1.21.0; python_version == "2.7" or python_version == "3.5"
